changed modal css position from absolute to fixed to keep visible while scrolling

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -142,7 +142,7 @@ input {
 
 /* Modal */
 .overlay{
-  position:absolute;
+  position:fixed;
   left: 0;
   top: 0;
   width: 100vw;
